# llm-excel

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
demo/: budget.xlsx  sales.xlsx  xlcat.tape  xlset.tape
docs/superpowers/plans/: 2026-03-13-xlcat-plan.md  2026-03-13-xlset-plan.md
docs/superpowers/specs/: 2026-03-13-xlcat-design.md
examples/: create_demo.rs
src/: cell.rs  formatter.rs  lib.rs  writer.rs
tests/: test_integration.rs  test_xlset.rs
xlcat/: Cargo.toml
xlcat/src/: main.rs  metadata.rs
xlcat/tests/: test_integration.rs  test_metadata.rs
xlcat/tests/common/: mod.rs
