[package]
name = "xlcat"
version = "0.2.1"
edition = "2024"
description = "CLI tools for viewing and editing Excel files — designed for LLMs and Claude Code"
license = "MIT"
repository = "https://github.com/eloualiche/llm-excel"
keywords = ["excel", "xlsx", "cli", "llm"]
categories = ["command-line-utilities"]
exclude = ["demo/*.gif", "docs/superpowers/"]

[lib]
name = "xlcat"
path = "src/lib.rs"

[[bin]]
name = "xlcat"
path = "src/bin/xlcat.rs"

[[bin]]
name = "xlset"
path = "src/bin/xlset.rs"

[dependencies]
calamine = "0.26"
polars = { version = "0.46", features = ["dtype-date", "dtype-datetime", "dtype-duration", "csv"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
umya-spreadsheet = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dev-dependencies]
rust_xlsxwriter = "0.82"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
