[package]
name = "xlcat"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.26"
polars = { version = "0.46", features = ["dtype-date", "dtype-datetime", "dtype-duration", "csv"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
rust_xlsxwriter = "0.82"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
